# Django-Training-Anas-Hagras

./: README.md  Results.md  conftest.py  pyproject.toml
albums/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_approved_alter_album_creationdate.py  0003_alter_album_creationdate.py  0004_alter_album_creationdate.py  0005_remove_album_creationdate_album_status_and_more.py  0006_remove_album_status_remove_album_status_changed_and_more.py  0007_song.py  0008_song_album.py  0009_remove_song_song_image.py  0010_song_song_image.py
albums/tests/: test_api.py  test_models.py  test_serializers.py
artists/: admin.py  models.py  tasks.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_sociallink.py  0003_artist_user.py  0004_alter_artist_user.py
artists/serializers/: ArtistSerializer.py
artists/tests/: test_artist.py
authentication/: urls.py  views.py
authentication/tests/: test_endpoints.py
fixtures/: auth_client.py
musicplatform/: celery.py  settings.py  urls.py
templates/: index.html
templates/albums/: create.html  show.html
templates/artists/: create.html  index.html
templates/authentication/: login.html  register.html
templates/songs/: create.html  index.html
testest/: urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_description_remove_user_status_user_bio.py  0003_alter_user_bio.py  0004_alter_user_email.py
users/tests/: test_user.py
