[tool.poetry]
name = "[django]"
version = "0.1.0"
description = ""
authors = ["AnasHagras"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
django-model-utils = "^4.2.0"
pillow = "^9.2.0"
django-imagekit = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
