[tool.poetry]
name = "function"
version = "0.1.0"
description = ""
authors = ["AnasHagras"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"
django-model-utils = "^4.2.0"
django-rest-knox = "^4.2.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
